Resources/css/main.css
/* ... */
p.thin-header {
    font-size: 18px;
    margin-bottom: 20px;
}

table.maker-kit > tbody > tr:nth-of-type(odd) {
    background-color: rgb(241,241,242);
}

table.maker-kit > tbody > tr > th {
    font-weight: 200;
    color: rgb(000,000,000);
}

ul.maker-kit > li > a > h3 {
    text-align: left;
}

.floatTop {
    margin-top: 16%;
}

ul.maker-kit > li > a {
    padding-left: 0;
}

img.maker-kit {
    margin-bottom: 20px;
    max-width: 100%;
    max-height: 100%;
}

.lineTop {
    border-top: 1px solid rgb(230,230,230);
}

iframe.maker-kit {
    padding-left: 15px;
    padding-right: 15px;
    border: none;
    overflow: hidden;
}

.col-3-image {
    height: 147px;
    margin-left: auto;
    margin-right: auto;
}


.projectRow {
    margin-top: 20px;
    margin-bottom: 20px;
}

    .projectRow > div > h2 {
        margin-top: 30%;
    }

.button-flat {
    border-radius: 0;
    display: inline-block;
    font-size: 1em;
    font-weight: 400;
    line-height: normal;
    padding: .5em 1.5em;
    margin-right: 0.8em;
    min-width: 100%;
    margin-bottom: 0.8em;
    text-align: center;
}

.button-blue {
    border-style: solid;
    border-width: 2px;
    border-color: #0078d7;
    background-color: #0078d7;
    color: #fff !important;
}

.button-flat:hover {
    border-color: #004E8C;
    cursor: pointer;
}

.button-flat:active {
    background-color: gray !important;
    border-color: gray !important;
}

.section-title {
    margin-top: 0px;
}

.comparison-picture {
    width: 324px;
    height: 231px;
}

.subtext {
    color: gray;
    margin-bottom: 64px;
    margin-top: 0;
}

.divider {
    border-bottom-style: solid;
    padding-bottom: 10px;
    border-bottom-width: 2px;
    border-bottom-color: #0078d7;
}

div.preview {
    height: 150px;
}

#hth-welcome {
    color: black;
    font-family: 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Arial, sans-serif;
    background: -webkit-linear-gradient(white,white,rgb(230,230,230)); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(white,white,rgb(230,230,230)); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(white,white,rgb(230,230,230)); /* For Firefox 3.6 to 15 */
    background: linear-gradient(white,white,rgb(230,230,230)); /* Standard syntax */
}

    #hth-welcome > .row > h1 {
        color: rgb(0,120,215);
        font-size: 75px;
        margin-top: 40px;
        text-align: left;
    }

    #hth-welcome > .row > h4 {
        text-align: left;
    }

.hth-major-text {
    font-weight: lighter;
    font-size: 22px;
}

#hth-feature-block {
    font-family: 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Arial, sans-serif;
    background: -webkit-linear-gradient(rgb(230,230,230),white); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(rgb(230,230,230),white); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(rgb(230,230,230),white); /* For Firefox 3.6 to 15 */
    background: linear-gradient(rgb(230,230,230),white); /* Standard syntax */
    margin-top: -20px;
    text-align: justify;
    padding-bottom: 30px;
}

    #hth-feature-block > .row > .col-md-8 > .hth-major-text {
        font-family: "Segoe UI Light","Segoe UI Web Light","Segoe UI Web Regular","Segoe UI","Segoe UI Symbol","HelveticaNeue-Light","Helvetica Neue",Arial,sans-serif;
    }

    #hth-feature-block > h1 {
        color: rgb(0,120,215);
        font-size: 60px;
        padding-top: 20px;
    }

.featured-project {
    font-size: 72px;
}

.featured-image {
    margin-top: 20px;
    margin-bottom: 30px;
}

.hth-project-image {
    margin-left: 25px;
    max-height: 220px;
}

#hth-list-block > h1 {
    text-align: center;
    font-family: 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Arial, sans-serif;
    color: rgb(0,120,215);
    font-size: 60px;
}

#hth-list-block > .row > .col-sm-4 > p {
    display: block;
}

.row-inline {
    white-space: nowrap;
    overflow: scroll;
    display: inline-block;
}

.card {
    background-color: rgb(245,245,245);
    margin-bottom: 12px;
    margin-top: 18px;
    box-shadow: 1px 2px 1px .5px rgba(0, 0, 0, 0.2);
    border: 1px solid rgb(190,190,190);
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
}

.block-image {
    width: inherit;
}

.card > .block-image > img {
    margin-left: auto;
    margin-right: auto;
    max-height: 250px;
    max-width: 100%;
    display: block;
    width: 100%;
}

.card-body {
    padding: 5px;
}

    .card-body > .row > .col-xs-4 {
        padding-left: 0;
        padding-right: 0;
    }

.center {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.tile-display {
    margin-top: 15px;
    border: 1px solid rgb(210,210,210);
    background-color: rgb(230,230,230);
    border-radius: 3px;
    padding: 10px;
    height: 100%;
    padding-left: 10px;
    padding-right: 10px;
}

    .tile-display > .row {
        margin-left: 0;
        margin-right: 0;
    }

.authors {
    color: rgb(165,165,165);
}

.devices-row {
    margin-bottom: 20px;
    margin-top: 10px;
}

.row-no-margin {
    margin-left: 0;
    margin-right: 0;
}

.btn-group-justified {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

    .btn-group-justified > .btn {
        width: 30%;
        margin: 2px;
    }

.filter-button {
    margin: 10px;
}

    .filter-button > .dropdown-menu {
        padding: 5px;
    }

        .filter-button > .dropdown-menu > li {
            cursor: pointer;
        }

#device-center-link {
    margin-top: 4px;
    margin-bottom: 24px;
}

.col-no-padding {
    padding-left: 0;
    padding-right: 0;
}

.breadcrumb {
    background-color: transparent;
    margin-top: 32px;
    padding-left: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
}

    .breadcrumb > .active {
        color: inherit;
    }
/* ... */

